--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,6 @@ numpy==1.16.3
 opencv-python==4.1.0.25
 pyparsing==2.4.0
 python-dateutil==2.8.0
+python-dotenv==0.10.1
 six==1.12.0
 Werkzeug==0.15.2
